--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <footer>
         <section class="container p-3 rounded">
-            <p class="d-flex justify-content-end align-items-center fw-bold">&copy;All Right Reserved Riajul Islam.</p>
+            <p class="d-flex justify-content-end align-items-center fw-bold">&copy;All Right Reserved Sadia Siddika.</p>
         </section>
     </footer>
 
